# gridfinity-tools

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: README.md  generate_drawer_spacer.py
specs/: implementation-plan.md
src/gridfinity_tools/: __init__.py  __main__.py  constants.py
src/gridfinity_tools/cli/: baseplate.py  drawer.py  main.py  spacer.py
src/gridfinity_tools/core/: baseplate_generator.py  drawer_generator.py  printer.py  spacer_generator.py
src/gridfinity_tools/utils/: naming.py  splitting.py  units.py  validation.py
tests/: test_main.py
tests/cli/: test_baseplate_command.py  test_drawer_command.py  test_main.py  test_spacer_command.py
tests/core/: test_baseplate_generator.py  test_drawer_generator.py  test_printer.py  test_spacer_generator.py
tests/utils/: test_naming.py  test_splitting.py  test_units.py  test_validation.py
