[project]
name = "gridfinity-tools"
version = "0.1.0"
description = "CLI tools for generating custom Gridfinity storage solutions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Sam Grimee", email = "sam@grimee.be" },
]
keywords = [
    "gridfinity",
    "cadquery",
    "3d-printing",
    "cad",
    "parametric",
    "organization",
    "storage",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "cadquery>=2.6.1",
    "cqkit>=0.5.6",
    "cqgridfinity>=0.5.7",
    "click>=8.1.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/sgrimee/gridfinity-tools"
Repository = "https://github.com/sgrimee/gridfinity-tools"
Issues = "https://github.com/sgrimee/gridfinity-tools/issues"

[project.scripts]
gridfinity-tools = "gridfinity_tools.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gridfinity_tools"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["D"]   # Don't require docstrings in tests

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = [
    "cadquery.*",
    "cqgridfinity.*",
    "cqkit.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.10",
]
